samples/_failures_safe/1761300890_449654_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6327f0bc.c: In function ‘main’:
./samples/SAFE/__tmp_6327f0bc.c:159:5: error: expected declaration or statement at end of input
  159 |     }
      |     ^
